--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-CURRENTURL=http://localhost:7000/
-AUTH_EMAIL=corporateacc701@gmail.com
-CURRENTURL=http://localhost:7000/
-MONGO_USER=gerald
-MONGO_PASSWORD=GZ3r0pV0toPBWmCV
+MONGO_USER=dotsafetyuser
+MONGO_PASSWORD=FNGjaSlUlGYT9mnw
+DATABASE=tickets-app
